Added timetableform and automateform in forms.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class = "container mt-5">
     <h1>Click here to automate your classes on MicroSoft Teams</h1>
-    <a href="{% url 'automate' %}">Start</a>
+    <a href="{% url 'automate' %}" class="btn btn-primary">Start</a>
 </div>
 
 {% endblock %}
