--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static%}
 <html lang="en">
 
 <head>
@@ -11,20 +12,39 @@
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <title>Sarvathr</title>
+    
     <style>
 
         body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: #f1f1f1;
         }
+
+        header{
+            margin-bottom: 200px;
+        }
+
         
     </style>
+    <link href="{% static 'assets/css/bootstrap.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/bootstrap-responsive.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/prettyPhoto.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/animate.css' %}" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Roboto+Condensed:400,300,700" rel="stylesheet" />
+
+  <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/color/default.css' %}" rel="stylesheet" />
+
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png" />
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png" />
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png" />
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" href="ico/apple-touch-icon-57-precomposed.png" />
+  <link rel="{% static 'shortcut icon' %}" href="ico/favicon.ico" />
 </head>
 
 <body>
 
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{% url 'index' %}">Sarvathr</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -51,7 +71,52 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
+        <header >
+            <!-- start top -->
+            <div id="topnav" class="navbar navbar-fixed-top default">
+              <div class="navbar-inner">
+                <div class="container">
+                  <div class="logo">
+                    <a href="index.html"><img src="{% static 'assets/img/dummies/logo11.jpeg' %}" alt="" style="height:70px;width:67px;"/></a>
+                  </div>
+                  <div class="navigation">
+                    <nav>
+                      <ul class="nav pull-right">
+                        <!-- <li class="current"><a href="#intro">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="/view">AutoClaZZ</a></li> -->
+                        <li class="nav-item current">
+                            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                        </li>
+                        <li class="nav-item ml-auto">
+                            <a class="nav-link" href="{% url 'register' %}">Register</a>
+                        </li>
+                        {% if user.is_authenticated %}
+                        <li class="nav-item ml-auto">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item ml-auto">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                        {% endif %}
+                        <li class="dropdown">
+                          <ul class="dropdown-menu">
+                            <li><a href="components.html" class="external">Components</a></li>
+                            <li><a href="icons.html" class="external">Icons</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                  <!--/.nav-collapse -->
+                </div>
+              </div>
+            </div>
+            <!-- end top -->
+          </header>
         {% block body_block %}
         {% endblock %}
 
@@ -68,6 +133,25 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
+
+    <script src="{% static 'assets/js/jquery.min.js' %}"></script>
+  <script src="{% static 'assets/js/jquery.easing.js' %}"></script>
+  <script src="{% static 'assets/js/bootstrap.js' %}"></script>
+  <script src="{% static 'assets/js/parallax/jquery.parallax-1.1.3.js' %}"></script>
+  <script src="{% static 'assets/js/nagging-menu.js' %} "></script>
+  <script src="{% static ' assets/js/jquery.nav.js' %}"></script>
+  <script src="{% static 'assets/js/prettyPhoto/jquery.prettyPhoto.js' %}"></script>
+  <script src="{% static 'assets/js/portfolio/jquery.quicksand.js' %}"></script>
+  <script src="{% static 'assets/js/portfolio/setting.js' %}"></script>
+  <script src="assets/js/hover/jquery-hover-effect.js"></script>
+  <script src="{% static 'assets/js/jquery.scrollTo.min.js' %}"></script>
+  <script src="{% static 'assets/js/animate.js' %}"></script>
+
+  <!-- Contact Form JavaScript File -->
+  <script src="{% static 'contactform/contactform.js' %}"></script>
+
+  <!-- Template Custom Javascript File -->
+  <script src="{% static 'assets/js/custom.js' %}"></script>
     </body>
 
 </html>
