--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,295 @@
-{% extends 'base.html' %}
+<!doctype html>
+{% load static%}
 
-{% block body_block %}
+<html lang="en">
 
-<div class = "container mt-5">
-    <h1>Click here to add timetable</h1>
-    <a href="{% url 'timetable' %}" class="btn btn-primary">TimeTable</a>
-    <h1>Click here to register MicroSoft Teams details for automation</h1>
-    <a href="{% url 'automate register' %}" class="btn btn-primary">Auto Register</a>
-    <h1>Click here to automate your classes on MicroSoft Teams</h1>
-    <a href="{% url 'automate' %}" class="btn btn-primary">Start</a>
-</div>
+<head>
+  <meta charset="utf-8">
+  <title>Sarvathr</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <!-- styles -->
+  <link href="{% static 'assets/css/bootstrap.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/bootstrap-responsive.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/prettyPhoto.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/css/animate.css' %}" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic|Roboto+Condensed:400,300,700" rel="stylesheet" />
 
-{% endblock %}
+  <link href="{% static 'assets/css/style.css' %}" rel="stylesheet" />
+  <link href="{% static 'assets/color/default.css' %}" rel="stylesheet" />
+
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png" />
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png" />
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png" />
+  <link rel="{% static 'apple-touch-icon-precomposed' %}" href="ico/apple-touch-icon-57-precomposed.png" />
+  <link rel="{% static 'shortcut icon' %}" href="ico/favicon.ico" />
+
+</head>
+
+<body>
+  <header>
+    <!-- start top -->
+    <div id="topnav" class="navbar navbar-fixed-top default">
+      <div class="navbar-inner">
+        <div class="container">
+          <div class="logo">
+            <a href="index.html"><img src="{% static 'assets/img/dummies/logo11.jpeg' %}" alt="" style="height:70px;width:67px;"/></a>
+          </div>
+          <div class="navigation">
+            <nav>
+              <ul class="nav pull-right">
+                <li class="current"><a href="#intro">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="/view">AutoClaZZ</a></li>
+                <li class="dropdown">
+                  <ul class="dropdown-menu">
+                    <li><a href="components.html" class="external">Components</a></li>
+                    <li><a href="icons.html" class="external">Icons</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    <!-- end top -->
+  </header>
+  <!-- section intro -->
+  <section id="intro">
+    <div class="slogan">
+      <div class="icon">
+        <i class="icon-beaker icon-10x"></i>
+      </div>
+      <h1>Welcome to <span>AutoClaZZ </span>The Learning Site</h1>
+      <h2>Providing a medium to access study materials</h2>
+    </div>
+  </section>
+  <!-- end intro -->
+  <!-- Section about -->
+  <section id="about" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <div class="heading">
+            <h3><span>About us</span></h3>
+          </div>
+          <div class="sub-heading">
+            </p>
+            <p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span3">
+          <img src="{% static 'assets/img/dummies/Ramadas.jpeg' %}" alt="" class="img-polaroid" />
+          <div class="roles">
+            <h5><strong>Ramdas Kamat</strong></h5>
+            <p>
+              R.V. College Of Engineering
+            </p>
+            <br>
+            <ul class="social-profile">
+              <li><a href="https://www.linkedin.com/in/ramadas-kamat-98a623193/"><i class="icon-linkedin icon-32 icon-circled"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span3">
+          <img src="{% static 'assets/img/dummies/Disha.jpeg' %}" alt="" class="img-polaroid" />
+          <div class="roles">
+            <h5><strong>Disha Shanbhag</strong></h5>
+            <p>
+              BMS Institue of Technology and Management
+            </p>
+            <ul class="social-profile">
+              <li><a href="https://www.linkedin.com/in/dishashanbhag08/"><i class="icon-linkedin icon-32 icon-circled"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span3">
+          <img src="{% static 'assets/img/dummies/anup1.jpg' %}" alt="" class="img-polaroid" />
+          <div class="roles">
+            <h5><strong>Anup Vernekar</strong></h5>
+            <p>
+              Ramaiah Institute of Technology
+            </p>
+            <br>
+            <ul class="social-profile">
+              <li><a href="https://www.linkedin.com/in/anup-vernekar-246b45171/"><i class="icon-linkedin icon-32 icon-circled"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span3">
+          <img src="{% static 'assets/img/dummies/Shravan.jpeg' %}" alt="" class="img-polaroid" />
+          <div class="roles">
+            <h5><strong>Shravan Tandel</strong></h5>
+            <p>
+              University of Vishweshwaraya College of Engineering 
+            </p>
+            <ul class="social-profile">
+              <li><a href="https://www.linkedin.com/in/shravan-tandel-897188181/"><i class="icon-linkedin icon-32 icon-circled"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span3">
+          
+        </div>
+        <div class="span3">
+          <img src="{% static 'assets/img/dummies/Deeksha.jpeg' %}" alt="" class="img-polaroid" />
+          <div class="roles">
+            <h5><strong>Deeksha Mesta</strong></h5>
+            <p>
+              Vidhyavardhaka College of Engineering 
+            </p>
+            <ul class="social-profile">
+              <li><a href="https://www.linkedin.com/in/deeksha-mesta-766434178/"><i class="icon-linkedin icon-32 icon-circled"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="span3">
+          <img src="{% static 'assets/img/dummies/Sharath.jpeg' %}" alt="" class="img-polaroid" style="height:330px"/>
+          <div class="roles">
+            <h5><strong>Sharath Shenoy</strong></h5>
+            <p>
+              R.V. College of Engineering
+            </p>
+            <ul class="social-profile">
+              <li><a href="https://www.linkedin.com/in/sharath-shenoy-81b91a18b/"><i class="icon-linkedin icon-32 icon-circled"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </section>
+  <!-- end section about -->
+   <!-- section contact -->
+  <section id="contact" class="section">
+    <div class="container">
+      <div class="row">
+        <div class="span12">
+          <div class="heading">
+            <h3><span>Get in touch</span></h3>
+          </div>
+          <div class="sub-heading">
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="span6">
+          <h4><i class="icon-envelope"></i><strong>Contact form</strong></h4>
+          <p>
+            Want to work with us or just want to say hello? Don't hesitate to get in touch!
+          </p>
+          <!-- start contact form -->
+          <form action="MAILTO:anupvernekar31@gmail.com" method="post" role="form" class="contactForm" enctype="text/plain">
+            <div id="sendmessage">Your message has been sent. Thank you!</div>
+            <div id="errormessage"></div>
+
+            <ul class="contact-list">
+              <li class="form-group">
+                <label>Name <span>*</span></label>
+                <input type="text" name="name" class="form_input" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                <div class="validation"></div>
+                <li class="form-group">
+                  <label>Email <span>*</span></label>
+                  <input type="email" class="form_input" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                  <div class="validation"></div>
+                </li>
+                <li class="form-group">
+                  <label>Subject <span>*</span></label>
+                  <input type="text" class="form_input" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <div class="validation"></div>
+                </li>
+
+                <li class="form-group">
+                  <label>Your message <span>*</span></label>
+                  <textarea class="form_textarea" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                  <div class="validation"></div>
+                </li>
+                <li class="last">
+                  <a style="text-decoration: none" href="mailto:anupvernekar31@gmail.com">Send a message</a>
+                </li>
+            </ul>
+          </form>
+
+          <!-- end contact form -->
+        </div>
+        <div class="span6">
+          <h4><i class="icon-suitcase"></i><strong>HELP</strong></h4>
+          <p>
+            Feel free to ask if you have any question regarding our services or if you just want to say Hello, we would love to hear from you.
+          </p>
+          <div class="dotted_line">
+          </div>
+          <p>
+            <strong>World Konkani Centre</strong>
+          </p>
+          <p>
+            Lobo Prabhu Nagar - Konkani Gaon, Shakti Nagar, Mangalore,Karnataka - 575016
+          </p>
+          <p>
+            <span><i class="icon-phone"></i><strong>Phone:</strong>08242 - 231877</span>
+          </p>
+          <p>
+            <span><i class="icon-envelope-alt"></i><strong>Email:</strong>worldkonkonkani@gmail.com </span>
+          </p>
+          <div class="dotted_line">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- end section contact -->
+
+  <footer>
+    <div class="verybottom">
+      <div class="container">
+        <div class="row">
+          <div class="span12">
+            <div class="aligncenter">
+              <div class="logo">
+                <a class="brand" href="index.html"><img src="{% static 'assets/img/dummies/logo11.jpeg' %}" alt="" /></a>
+              </div>
+              <p>
+                &copy; AutoClaZZ - All right reserved
+              </p>
+               </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <a href="#" class="scrollup"><i class="icon-chevron-up icon-square icon-48 active"></i></a>
+
+  <!-- Javascript Library Files -->
+  <script src="{% static 'assets/js/jquery.min.js' %}"></script>
+  <script src="{% static 'assets/js/jquery.easing.js' %}"></script>
+  <script src="{% static 'assets/js/bootstrap.js' %}"></script>
+  <script src="{% static 'assets/js/parallax/jquery.parallax-1.1.3.js' %}"></script>
+  <script src="{% static 'assets/js/nagging-menu.js' %} "></script>
+  <script src="{% static ' assets/js/jquery.nav.js' %}"></script>
+  <script src="{% static 'assets/js/prettyPhoto/jquery.prettyPhoto.js' %}"></script>
+  <script src="{% static 'assets/js/portfolio/jquery.quicksand.js' %}"></script>
+  <script src="{% static 'assets/js/portfolio/setting.js' %}"></script>
+  <script src="assets/js/hover/jquery-hover-effect.js"></script>
+  <script src="{% static 'assets/js/jquery.scrollTo.min.js' %}"></script>
+  <script src="{% static 'assets/js/animate.js' %}"></script>
+
+  <!-- Contact Form JavaScript File -->
+  <script src="{% static 'contactform/contactform.js' %}"></script>
+
+  <!-- Template Custom Javascript File -->
+  <script src="{% static 'assets/js/custom.js' %}"></script>
+
+</body>
+
+</html>
