--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,71 @@
 {% extends 'base.html' %}
 
 {% block body_block %}
+<style>
+
+    * {
+        box-sizing: border-box;
+    }
+    body{
+        background-image: url('https://thumbs.dreamstime.com/z/digital-library-online-education-concept-laptop-computer-colorful-books-d-rendering-digital-library-online-education-125338362.jpg');
+    }
+
+    .box {
+     
+     background-color: rgba(99, 104, 163, 0.452);
+     padding: 50px;
+     margin-top: 125px;
+     margin-left: 800px;
+     width: 350px;
+     height: 450px;
+    }
+
+
+    /* Full-width input fields */
+    input[type=text],
+    input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 5px 22px 0;
+        display: inline-block;
+        border: none;
+        position: middle;
+        background: #faf9f9;
+    }
+
+    input[type=text]:focus,
+    input[type=password]:focus {
+        outline: none;
+    }
+    input[type=submit] {
+  background-color: #000000;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  
+}
+
+    /* Overwrite default styles of hr */
+    h,h1 {
+        color: rgb(73, 0, 0);
+        margin-bottom: 25px;
+
+    }
+    
+
+</style>
 
 <form method = "POST">{% csrf_token %}
+    <div class="box">
+    <h1>Login</h1>
+    <h>Username</h>
     <input type="text" name="username" placeholder="Username">
+    <h>Password</h>
     <input type="password" name="password" placeholder="Password">
     <input type="submit" value = "Login">
+    </div>
 
 </form>
 
