--- a/templates/register.html
+++ b/templates/register.html
@@ -2,10 +2,73 @@
 
 {% block body_block %}
 
+<style>
+
+    * {
+        box-sizing: border-box;
+    }
+    body{
+        background-image: url('https://thumbs.dreamstime.com/z/digital-library-online-education-concept-laptop-computer-colorful-books-d-rendering-digital-library-online-education-125338362.jpg');
+    }
+
+    .box {
+     
+     background-color:rgba(228, 245, 133, 0.377);
+     color :rgb(0, 0, 0);
+     padding: 50px;
+     margin-top: 125px;
+     margin-left: 900px;
+     margin-right: 700px;
+     width: 600px;
+     height: 750px;
+    }
+
+
+    /* Full-width input fields */
+    input[type=text],
+    input[type=password],
+    input[type=email] {
+        width: 70%;
+        padding: 20px;
+        margin: 5px 200px 22px 5px;
+        display: inline-block;
+        border: none;
+        position: middle;
+        background: #faf9f9;
+    }
+
+    input[type=text]:focus,
+    input[type=password]:focus,
+    input[type=email]:focus{
+        outline: none;
+    }
+    input[type=submit] {
+  background-color: #000000;
+  color: white;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  
+}
+
+
+    /* Overwrite default styles of hr */
+    h,h1 {
+        color: rgb(41, 0, 94);
+        margin-bottom: 25px;
+
+    }
+    
+
+</style>
+
 <form method = "POST">{% csrf_token %}
+    <div class="box">
     {{ userform.as_p }}
     {{ studentform.as_p }}
     <input type="submit" value = "Register">
+    </div>
 </form>
 
 {% endblock %}
