--- a/templates/base.html
+++ b/templates/base.html
@@ -93,6 +93,8 @@
                         <li class="nav-item ml-auto">
                             <a class="nav-link" href="{% url 'register' %}">Register</a>
                         </li>
+                        <li><a href="/view">AutoClaZZ</a></li>
+
                         {% if user.is_authenticated %}
                         <li class="nav-item ml-auto">
                             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
